--- a/wp-content/themes/untheme/style.css
+++ b/wp-content/themes/untheme/style.css
@@ -1723,8 +1723,8 @@ a.custom-logo-link img {
 	margin-bottom: 1.5em;
 }
 
-@media (max-width: 992px){
-	.sign{
+@media (max-width: 992px) {
+	.sign {
 		display: none;
 	}
 }
@@ -1782,4 +1782,69 @@ a.custom-logo-link img {
 	.slide-desc p {
 		font-size: 20px;
 	}
+}
+
+@media (max-width: 480px) {
+	.site-header .header-main .fixed-container .site-branding a.custom-logo-link {
+		height: 30px;
+		width: 100px;
+	}
+
+	.site-header .fixed-container {
+
+		align-items: center;
+
+	}
+
+	.site-header .fixed-container {
+		flex-wrap: wrap;
+		align-items: center;
+	}
+
+	/* .header-main {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	.site-header .fixed-container {
+		align-items: center;
+		flex-direction: column;
+	}
+
+	.header-right {
+		display: flex;
+		align-items: center;
+		gap: 30px;
+		justify-content: space-between;
+		width: 100%;
+		margin-top: 20px;
+	} */
+
+	.header-right {
+		display: flex;
+		align-items: center;
+		gap: 20px;
+	}
+
+	.header-right .contacts-list li {
+		width: 30px;
+		height: 30px;
+	}
+
+	.header-right .contacts-list li .contact-link {
+		width: 100%;
+		height: 100%;
+	}
+
+	.header-right .contacts-list .contacts-list__item._phone a {
+		width: 100%;
+		height: 100%;
+	}
+
+	.header-right .contacts-list .contacts-list__item._phone a div {
+		width: 100%;
+		height: 100%;
+	}
+
+	
 }
