--- a/wp-content/themes/untheme/css/style.css
+++ b/wp-content/themes/untheme/css/style.css
@@ -27,6 +27,12 @@ h1 {
     margin: 0;
 }
 
+h1.page-title {
+  font-size: 38px;
+  line-height: 1;
+  color: var(--dark);
+}
+
 
 h2 {
     font-size: 3vw;
