--- a/wp-content/themes/untheme/css/style.css
+++ b/wp-content/themes/untheme/css/style.css
@@ -40,8 +40,8 @@ h2 {
     font-family: 'Muller', sans-serif;
     font-weight: 400;
     line-height: 100%;
-    margin-bottom: 0;
-    margin-top: 0;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
 h2.title {
