--- a/wp-content/themes/untheme/css/style.css
+++ b/wp-content/themes/untheme/css/style.css
@@ -36,7 +36,7 @@ h1.page-title {
 
 h2 {
     font-size: 3vw;
-    color: var(--black);
+    color: var(--main);
     font-family: 'Muller', sans-serif;
     font-weight: 400;
     line-height: 100%;
