--- a/wp-content/themes/untheme/css/style.css
+++ b/wp-content/themes/untheme/css/style.css
@@ -78,12 +78,12 @@ h2.page-title {
 } */
 
 h3{
-    font-size: 38px;
-    line-height: 140%;
+    font-size: 28px;
+    line-height: 120%;
     color: var(--black);
     margin: 0;
-    margin-bottom: 0px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     font-weight: 700;
     text-transform: uppercase;
     font-weight: 400;
