--- a/wp-content/themes/untheme/css/style.css
+++ b/wp-content/themes/untheme/css/style.css
@@ -28,9 +28,9 @@ h1 {
 }
 
 h1.page-title {
-  font-size: 38px;
-  line-height: 1;
-  color: var(--dark);
+    font-size: 38px;
+    line-height: 1;
+    color: var(--dark);
 }
 
 
@@ -77,7 +77,7 @@ h2.page-title {
     margin-bottom: 10px;
 } */
 
-h3{
+h3 {
     font-size: 28px;
     line-height: 120%;
     color: var(--black);
@@ -297,8 +297,8 @@ ul .header-top__contacts__item a img {
 }
 
 .slide-heading h1 {
-  font-size: 2.4vw;
-  color: var(--black);
+    font-size: 2.4vw;
+    color: var(--black);
 }
 
 .slide-heading span {
@@ -3955,6 +3955,11 @@ figure.wp-block-image {
     .project-thumbnail {
         width: 100%;
         height: 220px;
+    }
+
+    .contacts-section__left .contacts-list li a {
+        height: auto;
+        gap: 5px;
     }
 }
 
