--- a/wp-content/themes/untheme/css/style.css
+++ b/wp-content/themes/untheme/css/style.css
@@ -1408,6 +1408,11 @@ section.section-about img.section-background {
     height: 40px;
 }
 
+.project-link svg {
+    width: 100%;
+    height: 100%;
+}
+
 .project-content {
     display: flex;
     gap: 10px;
