--- a/wp-content/themes/untheme/style.css
+++ b/wp-content/themes/untheme/style.css
@@ -920,6 +920,32 @@ ul.menu li .dropdown-menu li a:hover {
 	position: relative;
 }
 
+#menu-uslugi .menu-item-has-children>a:after {
+	content: '';
+	width: 10px;
+	height: 10px;
+	display: block;
+	background: url(images/svg/arrow.svg) no-repeat;
+	background-position-x: 0%;
+	background-position-y: 0%;
+	background-size: auto;
+	background-position: center;
+	background-size: contain;
+	transform: rotate(-90deg);
+	transition: all .5s linear;
+}
+
+#menu-uslugi .menu-item-has-children>a:hover:after {
+	transform: rotate(0);
+}
+
+#menu-uslugi .menu-item-has-children a {
+	display: flex;
+	gap: 10px;
+	align-items: center;
+}
+
+
 .header-bottom__services #menu-uslugi ul.dropdown-menu {
 	grid-template-columns: repeat(2, 1fr);
 	gap: 20px;
@@ -1209,6 +1235,7 @@ a.menu-toggle.open .bar:nth-child(3) {
 		display: flex;
 		position: fixed;
 		width: 100%;
+		height: 100%;
 		z-index: 2;
 		opacity: 0;
 		transition: all .5s linear;
@@ -1220,7 +1247,8 @@ a.menu-toggle.open .bar:nth-child(3) {
 	}
 
 	.header-nav ul li a {
-		text-transform: uppercase;
+		text-transform: none;
+		font-weight: 600;
 	}
 
 	.header-bottom.open {
@@ -1233,7 +1261,7 @@ a.menu-toggle.open .bar:nth-child(3) {
 		flex-direction: row;
 		gap: 20px;
 		padding-top: 10px;
-		justify-content: flex-end;
+		justify-content: flex-start;
 	}
 
 	.header-nav {
@@ -1260,7 +1288,7 @@ a.menu-toggle.open .bar:nth-child(3) {
 	}
 
 	.header-bottom__services ul#menu-uslugi li .dropdown-menu {
-		display: grid !important;
+		display: grid;
 		background: transparent;
 		padding: 0;
 		gap: 5px;
@@ -1272,7 +1300,8 @@ a.menu-toggle.open .bar:nth-child(3) {
 
 
 	.header-bottom__services #menu-uslugi {
-		gap: 40px;
+		gap: 10px;
+		flex-direction: column;
 	}
 
 	#menu-uslugi li .dropdown-menu li a {
@@ -1291,15 +1320,20 @@ a.menu-toggle.open .bar:nth-child(3) {
 		display: block;
 	} */
 
-	.header-bottom__services {
+	/* .header-bottom__services {
 		width: 100%;
 		padding-top: 20px;
 		margin-top: 10px;
 		border-top: 1px dotted var(--light-grey);
-	}
+	} */
 
 	.header-bottom .fixed-container {
 		flex-direction: column;
+		justify-content: flex-start;
+	}
+
+	.header-bottom .fixed-container {
+		display: block;
 	}
 
 
@@ -1747,7 +1781,7 @@ a.custom-logo-link img {
 		display: grid;
 	}
 
-	.header-bottom__services {
+	/* .header-bottom__services {
 		width: 100%;
 		padding-top: 20px;
 		margin-top: 10px;
@@ -1755,7 +1789,7 @@ a.custom-logo-link img {
 		overflow-y: scroll;
 		height: 100vh;
 		padding-bottom: 80px;
-	}
+	} */
 
 	.header-bottom__services #menu-uslugi {
 		gap: 20px;
@@ -1765,8 +1799,16 @@ a.custom-logo-link img {
 @media (max-width: 576px) {
 	.header-nav ul {
 		gap: 10px;
-		justify-content: center;
+		justify-content: flex-start;
 		flex-wrap: wrap;
+		flex-direction: row;
+		padding-bottom: 10px;
+		border-bottom: 1px solid #fff;
+	}
+
+	.header-bottom__services #menu-uslugi {
+		gap: 0;
+		padding-top: 10px;
 	}
 
 	.site-header .fixed-container {
@@ -1846,5 +1888,5 @@ a.custom-logo-link img {
 		height: 100%;
 	}
 
-	
+
 }
